--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>张茵最美</title>
+	<title>张茵世界最美</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="惊喜,有趣,最美" />
 	<meta name="description" content="世界上最美的女人，是张茵，但是她不喜欢我 ಥ_ಥ " />
